Trimming name before saving, fixed z-index issue

--- a/packages/crypto-koi-app/tailwind.css
+++ b/packages/crypto-koi-app/tailwind.css
@@ -38,36 +38,20 @@
   top: 33.333333%
 }
 
-.-bottom-20 {
-  bottom: -5rem
-}
-
-.bottom-52 {
-  bottom: 13rem
-}
-
-.bottom-10 {
-  bottom: 2.5rem
-}
-
-.bottom-20 {
-  bottom: 5rem
-}
-
-.bottom-28 {
-  bottom: 7rem
-}
-
-.bottom-32 {
-  bottom: 8rem
-}
-
 .bottom-40 {
   bottom: 10rem
 }
 
+.-bottom-20 {
+  bottom: -5rem
+}
+
 .z-10 {
   z-index: 10
+}
+
+.z-50 {
+  z-index: 50
 }
 
 .m-2 {
@@ -142,6 +126,10 @@
   margin-bottom: 2.5rem
 }
 
+.mt-3 {
+  margin-top: 0.75rem
+}
+
 .mt-5 {
   margin-top: 1.25rem
 }
@@ -164,14 +152,6 @@
 
 .mt-4 {
   margin-top: 1rem
-}
-
-.-mb-10 {
-  margin-bottom: -2.5rem
-}
-
-.mt-3 {
-  margin-top: 0.75rem
 }
 
 .flex {
@@ -285,11 +265,6 @@
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity))
-}
-
-.bg-slate-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(148 163 184 / var(--tw-bg-opacity))
 }
 
 .bg-zinc-300 {
@@ -410,14 +385,6 @@
 
 .pb-8 {
   padding-bottom: 2rem
-}
-
-.pt-5 {
-  padding-top: 1.25rem
-}
-
-.pt-10 {
-  padding-top: 2.5rem
 }
 
 .text-center {
